Do something a little more friendly and language agnostic, including the avoidance of required spacing pixels.

--- a/pages/css/whirled.css
+++ b/pages/css/whirled.css
@@ -245,6 +245,10 @@
   cursor: pointer;
 }
 
+.SceneWidget .PopulationLabel {
+  padding-right: 5px;
+}
+
 .FeedList {
   border-left: 1px dotted;
   border-right: 1px dotted;
